[package]
name = "pjlink-bridge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
md5 = "0.7"
mac_address = "1.1"
log = "0.4"

[dev-dependencies]
clap = "3.0.0-beta.2"
simple_logger = "1.11"